# s3-client

./: .gitignore  README.md  pyproject.toml
athena/: create_table.sql
scripts/: check_listpag.py  check_nulls.py  check_nulls2.py  debug_schema.py  find_fichas.py  migrate.py  test_schema.py  verify_and_cleanup.py
src/inmoba_s3/: __init__.py  athena.py  partida_store.py  s3.py  schema.py  store.py
tests/: conftest.py  test_migrate.py  test_partida_store.py  test_schema.py  test_store.py
