[project]
name = "inmoba-s3"
version = "0.1.0"
description = "S3 client for the inmoba-sunarp-vispartida bucket"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "structlog>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inmoba_s3"]
